--- a/CursoFocusAppleTV/Profile/Profile.storyboard
+++ b/CursoFocusAppleTV/Profile/Profile.storyboard
@@ -85,12 +85,15 @@
                                 <rect key="frame" x="610" y="727" width="700" height="74"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1KR-PU-0p4">
-                                        <rect key="frame" x="0.0" y="0.0" width="330.5" height="74"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="700" height="74"/>
                                         <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
                                         <state key="normal" title="Crear Perfil"/>
+                                        <connections>
+                                            <action selector="createButtonAction:" destination="PT9-8U-kP8" eventType="primaryActionTriggered" id="hV6-oF-1nU"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fzA-mH-ms8">
-                                        <rect key="frame" x="369.5" y="0.0" width="330.5" height="74"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fzA-mH-ms8">
+                                        <rect key="frame" x="0.0" y="-6" width="0.0" height="86"/>
                                         <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
                                         <state key="normal" title="Editar Perfiles"/>
                                     </button>
